# algorithm-exercises-cpp

./: .gitignore  CMakeLists.txt  README.md
3_sum_0_magic_triplet/: CMakeLists.txt
3_sum_0_magic_triplet/src/: magic_triplet.cpp
3_sum_0_magic_triplet_exercise/: README.md
3_sum_0_magic_triplet_exercise/src/: magic_triplet.cpp
build_script_example/: build_project.sh  clean_project.sh  rebuild_project.sh
cmake_build_resources/: build_project.sh  clean_project.sh  toolchain-linux.cmake
minimum_number_of_coins_exercise/: CMakeLists.txt  README.md
minimum_number_of_coins_exercise/src/: minimum_number_of_coins.cpp
